<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MenuContacto">

    <include
        android:id="@+id/miToolBarMenuContacto"
        layout="@layout/action_bar_dos">
    </include>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin">
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edtNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding"
            android:maxLines="1"
            android:inputType="text"
            android:hint="@string/menu_nombre"
            android:theme="@style/EditText"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin">
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edtCorreo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding"
            android:maxLines="1"
            android:inputType="textEmailAddress"
            android:hint="@string/menu_email"
            android:theme="@style/EditText"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin">
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edtMensaje"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding"
            android:gravity="top|start"
            android:lines="4"
            android:scrollbars="vertical"
            android:inputType="textMultiLine"
            android:hint="@string/menu_mensaje"
            android:theme="@style/EditText"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnEnviar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:layout_gravity="center"
        android:text="@string/menu_enviar_comentario"
        android:textAllCaps="false"
        android:theme="@style/MiBotonRaised"/>

</LinearLayout>